opam-version: "2.0"
name: "satysfi-uline-doc"
version: "0.2.1"
synopsis: "Document: Underline for SAtySFi"
description: """Document: Underline for SAtySFi"""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-uline"
bug-reports: "https://github.com/puripuri2100/SATySFi-uline/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-uline.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}
  "satysfi-dist"
  "satysfi-uline" {= "%{version}%"}
  "satysfi-lipsum" {>= "0.2.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "uline-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "uline-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
